--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "textlint": "^3.1.0"
   },
   "dependencies": {
-    "spellcheck-technical-word": "^1.1.3",
+    "spellcheck-technical-word": "git@github.com:sifue/spellcheck-technical-word.git",
     "textlint-rule-helper": "^1.1.2"
   }
 }
